# InfiniTAM

InfiniTAM/: CMakeLists.txt  Doxyfile
InfiniTAM/Engine/: UIEngine.cpp
InfiniTAM/ITMLib/: CMakeLists.txt  ITMLib.h
InfiniTAM/ITMLib/Engine/: ITMDenseMapper.cpp  ITMMainEngine.cpp  ITMMainEngine.h  ITMMeshingEngine.h  ITMVisualisationEngine.h  LIMUPrimitiveFitter.cpp  LIMUPrimitiveFitter.h
InfiniTAM/ITMLib/Engine/DeviceAgnostic/: ITMMeshingEngine.h  ITMRepresentationAccess.h  ITMSceneReconstructionEngine.h  ITMVisualisationEngine.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CPU/: ITMMeshingEngine_CPU.cpp  ITMMeshingEngine_CPU.h  ITMSceneReconstructionEngine_CPU.cpp  ITMVisualisationEngine_CPU.cpp  ITMVisualisationEngine_CPU.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CUDA/: ITMMeshingEngine_CUDA.cu
InfiniTAM/ITMLib/Objects/: ITMMesh.h  ITMRenderState.h  ITMRenderState_VH.h
InfiniTAM/ITMLib/Utils/: ITMLibDefines.h  ITMMath.h
InfiniTAM/script/: teddy.bat
